# exospot

./: .gitignore  Cargo.toml  songs.db-shm  songs.db-wal
migrations/: 0001_create_spt_songs.down.sql  0001_create_spt_songs.up.sql  0002_create_spt_albums.down.sql  0002_create_spt_albums.up.sql  0003_create_spt_artists.down.sql  0004_create_spt_songs_spt_artists.down.sql  0004_create_spt_songs_spt_artists.up.sql  20230713163836_create_spt_songs.up.sql  20230713164155_create_spt_albums.up.sql  20230713164200_create_spt_artists.up.sql  20230714102232_create_spt_albums_covers.down.sql  20230714102232_create_spt_albums_covers.up.sql  20230831102601_songs.down.sql  20230831102601_songs.up.sql
src/: main.rs  symphonia_decoder.rs
src/widgets/: spotify.rs
