[package]
name = "exospot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
rspotify = { version = "0.11", features = ["env-file"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
futures-util = "0.3.17"
async-stream = { version = "0.3.2", optional = true }