[package]
name = "exospot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
rspotify = { version = "0.11", features = ["env-file"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
futures-util = "0.3.17"
async-stream = { version = "0.3.2", optional = true }
viuer = "0.6"
reqwest = "0.11"
image = "0.24.6"
ratatui = { version = "0.21.0", features = ["all-widgets"]}
crossterm = { version = "0.25", features = ["event-stream"] }
bytes = "1"
open = "5"
urlencoding = "2.1.2"
anyhow = "1.0"
chrono = "0.4.26"
